# os-main-8

./: .dockerignore  .gitignore  .ruff-fixes-applied  AGENTS.md  AUDIT_IMPROVEMENTS.md  AUTO_LEARNING.md  CHANGELOG.md  CMakeLists.txt  CNAME  FINAL_DELIVERY_REPORT.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_GUIDE.md  KOLIBRI_AI_FILES_MANIFEST.txt  KOLIBRI_AI_IMPLEMENTATION.md  Makefile  PHASE_1_COMPLETE.md  PHASE_2_ARCHITECTURE.md  PHASE_2_IN_PROGRESS.md  PHASE_3_FINAL_SUMMARY.md  PHASE_4_IN_PROGRESS.md  QUICKSTART.md  README.md  REAL_AI_README.md  RELEASE.md  RELEASE_NOTES.md  START_HERE.txt  START_SERVER.sh  SWARM1000_SUMMARY.md  SYSTEM_RUNNING.md  TEST_GENERATION.md  api_bridge.py  check_system.sh  cleanup.sh  console_test.ks  delivery_summary.sh  demo_kolibri_ai.py  demo_real_ai.py  knowledge_bootstrap.ks  kolibri.sh  kolibri_improvement_checklist.md  (+12 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: beta-ci-cd.yml  ci.yml  codex-autofix.yml  conflict-resolver.yml  deploy-pages.yml  nightly-fuzz.yml  policy-check.yml  (+2 more)
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kolibri_coordinator  kolibri_indexer  kolibri_knowledge_relay  kolibri_knowledge_server  kolibri_node  kolibri_queue  kolibri_sim  kolibri_tests  ks_compiler
apps/: Dockerfile.indexer  kolibri_coordinator.c  kolibri_indexer.c  kolibri_knowledge_relay.c  kolibri_node.c  kolibri_queue.c  kolibri_sim_cli.c  ks_compiler.c
backend/: Dockerfile  __init__.py
boot/: kolibri.asm
build-fuzz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kolibri_indexer  kolibri_knowledge_server  kolibri_node  kolibri_queue  kolibri_sim  kolibri_tests  ks_compiler  ks_compiler_roundtrip.cmake
build_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
core/: __init__.py  kolibri_sim.py  memory.py  tracing.py
data/: kolibri_model.json  training_examples.tsv
deploy/: README.md  docker-compose.yml  release_pipeline_config.json
docs/: ACCESSIBILITY.md  AI_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  GOVERNANCE.md  INVENTORY_SCHEMA.md  KOLIBRI-Sigma-Core-Spec-v1.0-draft.md  KOLIBRI_CHAT_VISUAL_GUIDE.md  PHASE_10_SCENARIO_PLANNING.md  PHASE_3_ARCHITECTURE_IMPROVEMENTS.md  PHASE_5_MULTIAGENT.md  PHASE_6_COUNTERFACTUAL.md  PHASE_9_BAYESIAN_CAUSALITY.md  README.md  REAL_AI_GUIDE.md  RUNBOOK.md  SAFETY.md  SWARM1000.md  TASK_GRAPH.md  UX_CHECKLIST.md  admin_guide.md  architecture.md  beta_feedback.md  boevoy_roadmap_ru.md  conflict_resolution.md  decimal_cognition.md  demo_showcase.md  deployment.md  developer_guide.md  dorozhnaya_karta_zadachi.md  early_access_program.md  enterprise_bundle_v1.md  faq.md  formula_evolution.md  frontend_audit.md  genome_chain.md  go_to_market.md  kolibri_integrated_prototype.md  kolibri_omega_architecture.md  kolibri_omega_diagrams.md  kolibri_os.md  (+37 more)
docs_portal/: __init__.py  app.py  config.py  engine.py  examples.py  safe_executor.py
frontend/: .gitignore  .lighthouserc.js  Dockerfile  README.md  START_DEV.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  test.html  tsconfig.json  tsconfig.node.json  vite.config.ts
go_to_market/: __init__.py  playbook.py
kernel/: entry.asm  formula.c  genome.c  interrupts.asm  link.ld  main.c  net.c  ramdisk.c  ramdisk.h  random.c  serial.c  serial.h  support.c  support.h
kolibri_omega/: predictor_lobe.h  solver_lobe.h
logs/: README.md
ml_templates/: __init__.py  base.py  classification.py  generative.py  recommendation.py
release/: __init__.py  readiness.py
scripts/: __init__.py  anomaly_predictor.py  archive_cluster_results.sh  auto_train.sh  beta_feedback.py  build_iso.sh  build_wasm.sh  ci_bootstrap.sh  coverage_guard.py  dependency_audit.py  deploy_linux.sh  deploy_macos.sh  deploy_windows.ps1  docs_portal.py  export_soak_results.sh  generate_demo_storyboards.sh  generate_sbom.py  generate_script.js  generate_test_dialogs.py  ingest_knowledge.py  knowledge_pipeline.sh  kolibri_dev.py  launch_playbook.py  llm_teacher.py  mentorship_program.py  model_certifier.py  package_release.sh  policy_validate.py  post_pr_comment.py  project_health.py  release_audit.py  release_pipeline.py  release_readiness.py  resolve_conflicts.py  run_all.sh  run_backend.sh  run_cluster.sh  run_kolibri_stack.sh  scale_blueprint.py  sign_wasm.sh  (+5 more)
support/: __init__.py  program.py
swarm1000/: README.md  __init__.py  pyproject.toml  swarm.py
swarm1000/core/: __init__.py  codex_mcp.py  config.py  git_ops.py  inventory.py  logger.py  personas.py  planner.py  quality_gate.py  scheduler.py  state.py  tasks.py
swarm1000/data/: demo_results.json  inventory.json  task_graph.json
swarm1000/scripts/: bootstrap.sh  make_worktrees.sh  run_mcp_codex.sh  swarm_demo.sh  swarm_demo_auto.sh
swarm1000/templates/: AGENT_TASK.md  HANDOFF.md  PR_TEMPLATE.md
swarm1000/tests/: __init__.py  test_personas.py  test_planner.py  test_scheduler.py  test_state.py
tests/: conftest.py  fuzz_script.c  run_kolibri_node_hmac.py  test_ai_core.py  test_anomaly_predictor.py  test_backend_service.py  test_beta_feedback.py  test_config_secrets.py  test_coverage_guard.py  test_decimal.c  test_dependency_audit.py  test_digits.c  test_docs_portal.py  test_flagship_apps.py  test_formula.c  test_generate_test_dialogs.py  test_genome.c  test_knowledge_index.c  test_knowledge_queue.c  test_knowledge_server_integration.c  test_kolibri_api_integration.py  test_kolibri_dev_cli.py  test_kolibri_sim.py  test_launch_playbook.py  test_main.c  test_mentorship_program.py  test_ml_templates.py  test_model_certifier.py  test_net.c  test_observability.py  test_path_validator.py  test_production_middleware.py  test_project_health.py  test_public_api.c  test_release_audit.py  test_release_pipeline.py  test_release_readiness.py  test_resolve_conflicts.py  test_roy.c  test_safe_executor.py  (+9 more)
training/: Dockerfile  __init__.py  mentorship.py  scale_blueprint.py
wasm/: CMakeLists.txt  Makefile  kolibri_core.c
wasm/prebuilt/: README.md
(+290 files in other folders)
